deployment/kubernetes/overlays/general/production/rap/rap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rap
spec:
  selector:
    matchLabels:
      app: rap
  template:
    spec:
      containers:
        - name: ampersand-rap
