deployment/kubernetes/overlays/general/production/rap/student-prototype-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-prototype
spec:
  template:
    spec:
      containers:
        - image: ampersandtarski/rap4-student-prototype:production-latest
          name: rap4-student-prototype
